# Any-Cellular-Automata

./: .gitignore  CMakeLists.txt  README.md
doc/: commands.md  statements.md
inc/: conworld.hpp  guiset.hpp  guiworld.hpp  lexer.hpp  parse.hpp  rules.hpp  str_prefixs.hpp  token.hpp  world.hpp
src/: conworld.cpp  guiworld.cpp  lexer.cpp  main.cpp  parse.cpp  rules.cpp  token.cpp  world.cpp
syntax/: example.txt  world.ebnf
worlds/: any_in_pattern.world  brian_brain.world  day_and_night.world  diamoeba.world  gol.world  gol_with_tail.world  langton_ant.world  langton_ant_big.world  lwss_gun.world  mover.world  reactionBZ.world  seeds.world  wireworld.world
worlds/gui/: brian_brain.json  gol.json  gol_with_tail.json  langton_ant.json  langton_ant_big.json  mover.json  reactionBZ.json  wireworld.json
